ADV_C132_ObjectDetection_Project
Updated html code

--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
         <a class="btn btn-light class_images" href="">TV and AC</a><br>
         <a class="btn btn-light class_images" href="">Desk</a><br>
         <a class="btn btn-light class_images" href="">Bottles</a><br>
-        <a class="btn btn-light class_images" href="fruits.html">Fuit Basket</a><br>
+        <a class="btn btn-light class_images" href="">Fuit Basket</a><br>
+        <h3 id="status" class="btn btn-danger"></h3><br>
+
     </center>
+
 
     <script src="main.js"></script>
 
