ADV_C133_ObjectDetection_Project
Added code for all the pages to detect different objects in the picture as well as to display the results

--- a/index.html
+++ b/index.html
@@ -19,13 +19,11 @@
 <body>
     <center>
         <h1 class="btn btn-danger heading">Object Detection</h1><br><br>
-        <a class="btn btn-light class_images" href="">Bed Room</a><br>
-        <a class="btn btn-light class_images" href="">TV and AC</a><br>
-        <a class="btn btn-light class_images" href="">Desk</a><br>
-        <a class="btn btn-light class_images" href="">Bottles</a><br>
-        <a class="btn btn-light class_images" href="">Fuit Basket</a><br>
-        <h3 id="status" class="btn btn-danger"></h3><br>
-
+        <a class="btn btn-light class_images" href="bedroom.html">Bed Room</a><br>
+        <a class="btn btn-light class_images" href="tvac.html">TV and AC</a><br>
+        <a class="btn btn-light class_images" href="desk.html">Desk</a><br>
+        <a class="btn btn-light class_images" href="bottles.html">Bottles</a><br>
+        <a class="btn btn-light class_images" href="fruits.html">Fuit Basket</a><br>
     </center>
 
 
